--- a/index.html
+++ b/index.html
@@ -7,100 +7,11 @@
     <link rel="icon" href="bo.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="bofolio/css/fontawesome-all.min.css" type="text/css">
     <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">
-    <script src="bofolio/js/jquery-3.2.1.min.js"></script>
-    <script src="bofolio/js/js.js"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="author">
-            <div class="img"><img src="bofolio/images/bo.png" alt=""></div>
-            <div class="a-name">Vladimir<br><span>wb / dsgn</span></div>
-        </div>
-        <nav class="nav-bar">
-            <ul class="menu">
-                <li class="active"><a class="section-link nav-link" href="#bofolio"><i class="fas fa-images"></i> <span>bofolio</span></a></li>
-                <li><a class="section-link nav-link" href="#skills"><i class="fas fa-sun"></i> <span>skill</span></a></li>
-                <li><a class="section-link nav-link" href="#contact"><i class="fas fa-envelope"></i> <span>contact</span></a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="page">
-        <section id="bofolio" class="section bfolio">
-            <h2 class="heading">Works</h2>
-            <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/lead.png" alt=""></figure>
-                <div class="title">Lead.im</div>
-                <a href="http://www.lead.im" target="_blank" class="link">www.lead.im</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/yotam.png" alt=""></figure>
-                <div class="title">Yotam bezalel</div>
-                <a href="http://yotam-bezalel.co.il" target="_blank" class="link">yotam-bezalel.co.il</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/sohm.png" alt=""></figure>
-                <div class="title">Dominique Sohm</div>
-                <a href="http://www.sohm-productions.at" target="_blank" class="link">www.sohm-productions.at</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><a href="bofolio/images/temp/sohm2.png" target="_blank"><img src="bofolio/images/temp/sohm2s.png" alt=""></a></figure>
-                <div class="title">Dominique Sohm</div>
-                <a href="bofolio/images/temp/sohm2.png" target="_blank" class="link">screen</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><a href="bofolio/images/temp/swissstar.png" target="_blank"><img src="bofolio/images/temp/swissstars.png" alt=""></a></figure>
-                <div class="title">Swiss Start</div>
-                <a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/karavaevaflowers.jpg" alt=""></figure>
-                <div class="title">Karavaeva Flowers</div>
-                <a href="http://karavaevaflowers.com" target="_blank" class="link">karavaevaflowers.com</a>
-            </div>
-            <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/tipuli.png" alt=""></figure>
-                <div class="title">Tipuli</div>
-                <a href="http://www.tipuli.co.il" target="_blank" class="link">www.tipuli.co.il</a>
-            </div>
-        </section>
-        <section id="skills" class="section skill">
-            <h2 class="heading">Skills</h2>
-            <div class="skll-item">
-                <div class="title">Photoshop <div class="skill-progress"><svg width="30" height="30"><circle class="good" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/ps.jpg" alt=""></figure>
-            </div>
-            <div class="skll-item">
-                <div class="title">Illustrator <div class="skill-progress"><svg width="30" height="30"><circle class="well" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/ai.jpg" alt=""></figure>
-            </div>
-            <div class="skll-item">
-                <div class="title">HTML <div class="skill-progress"><svg width="30" height="30"><circle class="done" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/html.jpg" alt=""></figure>
-            </div>
-            <div class="skll-item">
-                <div class="title">CSS <div class="skill-progress"><svg width="30" height="30"><circle class="done" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/css.jpg" alt=""></figure>
-            </div>
-            <div class="skll-item">
-                <div class="title">Sass <div class="skill-progress"><svg width="30" height="30"><circle class="good" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/sass.jpg" alt=""></figure>
-            </div>
-            <div class="skll-item">
-                <div class="title">jQuery <div class="skill-progress"><svg width="30" height="30"><circle class="norm" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
-                <figure class="pic"><img src="bofolio/images/temp/jq.jpg" alt=""></figure>
-            </div>
-            <!-- <div class="skll-item">
-                <div class="title">Gulp/Grunt</div>
-                <figure class="pic"><img src="bofolio/images/temp/gulp-grunt.jpg" alt=""></figure>
-            </div> -->
-        </section>
-        <section id="contact" class="section contact">
-            <h2 class="heading">Contact</h2>
-            <a href="https://www.linkedin.com/in/vladimir-bo-21962b16/" class="btn" target="_blank">My Linkedin profile</a>
-        </section>
-    </main>
-    <footer class="footer">
-        <div class="text">2018 &copy; made with duck</div>
-    </footer>
+    <div class="coming-soon">
+        <img src="bofolio/images/cs.png" alt="">
+        <h6>Render in Blender 3D 2.91.2 cycles</h6>
+    </div>
 </body>
 </html>
