--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>Bofolio</title>
-    <link rel="icon" href="bo.ico" type="image/x-icon"> 
-    <link rel="stylesheet" href="bofolio/css/fontawesome-all.min.css" type="text/css">
-    <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">
-</head>
-<body>
-    <div class="coming-soon">
-        <img src="bofolio/images/cs.png" alt="">
-        <h6>Render in Blender 3D 2.91.2 cycles</h6>
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/bo.ico"><title>bobiora.github.io</title><link href="/dist/css/Cart.86684f95.css" rel="prefetch"><link href="/dist/css/shop.979fa0cc.css" rel="prefetch"><link href="/dist/js/Cart.a6118a9a.js" rel="prefetch"><link href="/dist/js/shop.e2868d8c.js" rel="prefetch"><link href="/dist/css/app.28a581d2.css" rel="preload" as="style"><link href="/dist/js/app.c619302e.js" rel="preload" as="script"><link href="/dist/js/chunk-vendors.2955d237.js" rel="preload" as="script"><link href="/dist/css/app.28a581d2.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but bobiora.github.io doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/dist/js/chunk-vendors.2955d237.js"></script><script src="/dist/js/app.c619302e.js"></script></body></html>
