--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <img src="bofolio/images/cs.png" alt="">
         <h6>Render in Blender 3D 2.91.2 cycles</h6>
     </div>
+    <script>
+        window.location.href = "/dist";
+    </script>
 </body>
 </html>
